# spiral-technology

./: .env  .gitignore  AUTH_IMPLEMENTATION_STATUS.md  Capability mapping.csv  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  SIGNAL_COMPONENTS_FIX.md  SIGNAL_STATUS_FINAL.md  SIGNAL_UI_MIGRATION.md  SIGNAL_UI_SYSTEM.md  SUPABASE_MIGRATION.md  TODO  Trunk.toml  download.js  f.html  index.html  migrate_ui.sh  package-lock.json  package.json  posts-scheme.json  vercel.json
src/: app.rs  main.rs  posts_mock_data.rs  test_utils.rs
src/_ui_system/: components_page.rs  mod.rs
src/_ui_system/button/: button_container.rs  mod.rs
src/_ui_system/caption/: caption.rs  mod.rs
src/_ui_system/close/: close.rs  mod.rs
src/_ui_system/icon/: icon.rs
src/_ui_system/img/: img.rs
src/_ui_system/selector/: selector.rs
src/_ui_system/slider/: mod.rs  (+1 more)
src/areas/: areas_context.rs  mod.rs  model.rs
src/auth/: auth_context.rs  mod.rs  model.rs
src/catalog/: _table_page.rs  catalog_context.rs  mod.rs  model.rs
src/content/: content_context.rs  mod.rs  model.rs
src/pages/: about_page.rs  catalog_page.rs  editor_page.rs  home_page.rs  mod.rs
src/projects/: mock_content.rs  mod.rs  model.rs  posts_mock_data.rs  project_page.rs  projects_context.rs  table_page.rs
src/shared/: data_state_model.rs  mod.rs
src/supabase/: config.rs  debug.rs  mod.rs
src/ui/: README.md  button.rs  button_new.rs  checkbox.rs  close_button.rs  error.rs  form.rs  input.rs  label.rs  mod.rs  select.rs  signal_button.rs  tabs.rs  text_editor.rs  textarea.rs  working_project_form.rs
style/: output.css  styles.css  tailwind.css
(+92 files in other folders)
