[package]
name = "spotter"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = { version = "0.6.0", features = ["http"] }
console_error_panic_hook = { version = "0.1.7" }
leptos = { version = "0.8.6", features = ["csr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.5"
serde = "1.0.218"
serde_json = "1.0.142"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Storage',
    'Window',
    'DomRect',
    'File',
    'FileList',
    'EventTarget',
] }
js-sys = "0.3.77"
chrono = "0.4.41"
serde_urlencoded = "0.7"
futures = "0.3.31"
leptos-use = "0.16.2"
leptos_macro = "0.8.6"
